--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require-dev": {
-    "phpunit/phpunit": "^10"
+    "phpunit/phpunit": "10"
   },
   "autoload": {
     "classmap": [
@@ -8,6 +8,8 @@
     ]
   },
   "require": {
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-exif": "*",
+    "ext-gd": "*"
   }
 }
